first steps to make network configurable

--- a/Debug_linux/Makefile
+++ b/Debug_linux/Makefile
@@ -182,6 +182,8 @@ C_SRCS +=  \
 ../src/page_main.c \
 ../src/thermocouple.c \
 ../src/controller.c \
+../src/settings.c \
+../src/page_network.c \
 ../src/standalone_lwip_demo_sam.c
 
 
@@ -257,6 +259,8 @@ src/page_misc.o \
 src/page_main.o \
 src/thermocouple.o \
 src/controller.o \
+src/settings.o \
+src/page_network.o \
 src/standalone_lwip_demo_sam.o
 
 OBJS_AS_ARGS +=  \
@@ -325,6 +329,8 @@ src/page_misc.o \
 src/page_main.o \
 src/thermocouple.o \
 src/controller.o \
+src/settings.o \
+src/page_network.o \
 src/standalone_lwip_demo_sam.o
 
 C_DEPS +=  \
@@ -393,6 +399,8 @@ src/page_misc.d \
 src/page_main.d \
 src/thermocouple.d \
 src/controller.d \
+src/settings.d \
+src/page_network.d \
 src/standalone_lwip_demo_sam.d
 
 C_DEPS_AS_ARGS +=  \
@@ -461,6 +469,8 @@ src/page_misc.d \
 src/page_main.d \
 src/thermocouple.d \
 src/controller.d \
+src/settings.d \
+src/page_network.d \
 src/standalone_lwip_demo_sam.d
 
 OUTPUT_FILE_PATH +=LWIP_EXAMPLE1.elf
